Fix distorted images in sequences on portrait screens

--- a/less/image-sequence.less
+++ b/less/image-sequence.less
@@ -25,6 +25,15 @@
     text-shadow: 0 0 1px rgba( 0, 0, 0, .5 );
     z-index: 30;
   }
+
+  /* helps to vertical center the images
+     based on this answer: http://stackoverflow.com/questions/7273338/how-to-vertically-align-an-image-inside-div
+   */
+  &_helper {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
 }
 
 /* Applied, when the image sequence was initialized with ScrollMagic */
@@ -56,8 +65,8 @@
       height: auto;
       max-height: 100%;
       max-width: 100%;
-      min-height: 100%;
       position: relative;
+      vertical-align: middle;
       width: auto;
     }
   }
@@ -70,7 +79,6 @@
       height: auto;
       max-height: none;
       max-width: none;
-      min-height: 100%;
       min-width: 100%;
       width: 100%;
     }
